--- a/english-puzzle/src/css/Components/_puzzleContainer.scss
+++ b/english-puzzle/src/css/Components/_puzzleContainer.scss
@@ -6,8 +6,14 @@
     align-items: center;
     .puzzle-container__results {
        width: 100%;
-       height: 500px;
+       height: 400px;
        background-color: gray; 
+       .result-sentence {
+            width: 100%;
+            height: 40px;
+            display: flex;
+            justify-content: space-between;
+       }
     }
     .puzzle-container__workspace {
         margin-top: 20px;
@@ -16,13 +22,21 @@
         box-shadow: 0 0 10px rgba(0,0,0,0.5);
         display: flex;
         justify-content: space-between;
-        .word {
-            display: inline-block;
+        .word-container {
             width: 100%;
-            height: 40px;
-            border: 1px solid black;
             text-align: center;
-            padding-top: 5px;
+            height: 40px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: yellowgreen;
+            .word {
+                display: inline-block;
+            }
+            .mask {
+                width: 20px;
+                height: 40px;
+            }
         }
     }
 }
