--- a/english-puzzle/src/css/Components/_puzzleContainer.scss
+++ b/english-puzzle/src/css/Components/_puzzleContainer.scss
@@ -4,39 +4,50 @@
     margin: auto;
     flex-direction: column;
     align-items: center;
-    .puzzle-container__results {
-       width: 100%;
-       height: 400px;
-       background-color: gray; 
-       .result-sentence {
-            width: 100%;
-            height: 40px;
-            display: flex;
-            justify-content: space-between;
-       }
-    }
-    .puzzle-container__workspace {
-        margin-top: 20px;
-        width: 100%;
-        height: 40px;
-        box-shadow: 0 0 10px rgba(0,0,0,0.5);
-        display: flex;
-        justify-content: space-between;
-        .word-container {
-            width: 100%;
-            text-align: center;
-            height: 40px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: yellowgreen;
-            .word {
-                display: inline-block;
-            }
-            .mask {
-                width: 20px;
-                height: 40px;
-            }
-        }
-    }
+}
+    
+
+
+.puzzle-container__results {
+    width: 100%;
+    height: 400px;
+    background-color: gray; 
+}
+
+.result-sentence {
+    width: 100%;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+}
+
+.word {
+    display: inline-block;
+}
+.mask {
+    width: 20px;
+    height: 40px;
+}
+
+.word-container {
+    width: 100%;
+    text-align: center;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: yellowgreen;
+}
+
+.puzzle-container__workspace {
+    margin-top: 20px;
+    width: 100%;
+    height: 40px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    display: flex;
+    justify-content: center;
+}
+
+.word-container-cont {
+    width: 100%;
 }
