--- a/english-puzzle/src/css/Components/_puzzleContainer.scss
+++ b/english-puzzle/src/css/Components/_puzzleContainer.scss
@@ -10,7 +10,7 @@
 
 .puzzle-container__results {
     width: 100%;
-    height: 400px;
+    height: 427px;
     background-color: gray; 
 }
 
@@ -19,6 +19,7 @@
     height: 40px;
     display: flex;
     justify-content: center;
+    margin-bottom: 3px;
 }
 
 .word {
